1999-05-15  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* config/alpha/mframe-generic.h (MFRAME_STACK_STRUCT): Add.
	Add casts from pointer diff to ints for printf args.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc_la_LIBADD): Add -lgcc.
	(libobjc_la_LDFLAGS): Add -L to libgcc location.  This is to
	resolve symbols like __eprintf on HPUX, where shared library
	linking doesn't go through gcc.

	* config/hppa/{mframe-hpux,compiler-info-hpux}.h: Renamed from
	*hpux10.h.

1999-05-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/sparc/mframe-solaris2.h (MFRAME_ARG_ENCODING): Return
	to using GET_SPARC_ARG_LOCATION; don't rely on compiler metadata for
	coding signature. Don't do alignment of offsets
	except in the case of stack.

1999-05-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m (mframe_next_arg): Handle negative offsets (as stack
	offsets).

	* config/hppa/mframe-hpux10.h (MFRAME_ARG_ENCODING): Rewrite.
	Allow negative offsets.  Use existing offsets, stripping register
	designation for floats and doubles.  Handle weird relocation of
	registers not designated for stack, but that underflow the top
	of the region between arg_ptr and argFrame.

	* config/hppa/{mframe,compiler-info}-hpux10.h replace *generic.h.

1999-05-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/sparc/mframe-solaris2.h (MFRAME_ARG_ENCODING): Disable
	check for sizes less and alignment of original.  Disable use
	of GET_SPARC_ARG_LOCATION, trusting the `+' and offset encoding.

	* config/mips/mframe-irix6.h: Add stack offset counter to mips_args.
	(MFRAME_INIT_ARGS): Initialize it to 96 (determined empirically).
	(MFRAME_ARG_ENCODING): Handle stack items. 

1999-05-08  Marcus Daniel  <marcusd@asl.krasnow.gmu.edu>

	* config/mips/mframe-irix6.h (MFRAME_INIT_ARGS, MFRAME_ARG_ENCODING): 
	Add separate counters for floating point and non-floating point
	registers.
